--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "Reverse/pyinstxtractor"]
 	path = Reverse/pyinstxtractor
 	url = https://github.com/extremecoders-re/pyinstxtractor.git
-[submodule "Reverse/python-uncompyle6"]
-	path = Reverse/python-uncompyle6
-	url = https://github.com/rocky/python-uncompyle6.git
 [submodule "Reverse/demovfuscator"]
 	path = Reverse/demovfuscator
 	url = https://github.com/kirschju/demovfuscator.git
@@ -28,3 +25,6 @@
 [submodule "Android/SignApk"]
 	path = Android/SignApk
 	url = https://github.com/techexpertize/SignApk.git
+[submodule "Reverse/uncompyle6"]
+	path = Reverse/uncompyle6
+	url = https://github.com/rocky/python-uncompyle6.git
