--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Android/SignApk"]
 	path = Android/SignApk
 	url = https://github.com/techexpertize/SignApk.git
+[submodule "Reverse/python-uncompyle6"]
+	path = Reverse/python-uncompyle6
+	url = https://github.com/rocky/python-uncompyle6.git
